done shopping cart

--- a/index.html
+++ b/index.html
@@ -35,12 +35,10 @@
 
                         </div>
                         <h5>$<span id="itemOneTotal">1219</span></h5>
-                        <img src="images/remove.png" alt="" class="remove-icon">
+                        <img src="images/remove.png" alt="remove-icon" class="remove-icon">
                      </div>
                   </div>
                </div>
-
-
                <div class="cart-item" ><!--cart item2-->
                   <div class="row" id="cart2" >
                     <div class="col-md-7 center-item">
@@ -55,7 +53,7 @@
                           <button class="btn btn-custom" id ="btnAdd2"><i class="fas fa-plus" ></i></button>
                        </div>
                        <h5>$<span id ="itemTwoTotal">59</span></h5>
-                       <img src="images/remove.png" alt="" class="remove-icon"> 
+                       <img src="images/remove.png" alt="remove-icon" class="remove-icon"> 
                     </div>
                  </div>
               </div>
